--- a/index.html
+++ b/index.html
@@ -141,7 +141,63 @@
                 <h3 class="name">Mark Guerrero</h3>
                 <p class="proffesion">Product Designer</p>
               </div>
-              <div class="icons">
+
+              <ul class="icons-list">
+                <li class="icons-punkt">
+                  <a
+                    href="https://www.instagram.com/"
+                    class="icons-item"
+                    target="_blank"
+                  >
+                    <svg class="social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icons-punkt">
+                  <a
+                    href="https://twitter.com/"
+                    class="icons-item"
+                    target="_blank"
+                  >
+                    <svg class="social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icons-punkt">
+                  <a
+                    href="https://www.facebook.com/"
+                    class="icons-item"
+                    target="_blank"
+                    ><svg class="social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icons-punkt">
+                  <a
+                    href="https://www.linkedin.com/"
+                    class="icons-item"
+                    target="_blank"
+                    ><svg class="social" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="team-photo-list">
+              <img
+                src="./images/img2.jpg"
+                alt="Frontend
+              Developer Photo"
+                width="264"
+              />
+              <div class="name-container">
+                <h3 class="name">Tom Ford</h3>
+                <p class="proffesion">Frontend Developer</p>
                 <ul class="icons-list">
                   <li class="icons-punkt">
                     <a
@@ -150,7 +206,7 @@
                       target="_blank"
                     >
                       <svg class="social" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -188,52 +244,55 @@
                 </ul>
               </div>
             </li>
-
-            <li class="team-photo-list">
-              <img
-                src="./images/img2.jpg"
-                alt="Frontend
-              Developer Photo"
-                width="264"
-              />
-              <div class="name-container">
-                <h3 class="name">Tom Ford</h3>
-                <p class="proffesion">Frontend Developer</p>
-              </div>
-              <div class="icons">
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-instagram"></use>
-                </svg>
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-twitter"></use>
-                </svg>
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-facebook"></use>
-                </svg>
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-linkedin"></use>
-                </svg>
-              </div>
-            </li>
             <li class="team-photo-list">
               <img src="./images/img3.jpg" alt="Marketing Photo" width="264" />
               <div class="name-container">
                 <h3 class="name">Camila Garcia</h3>
                 <p class="proffesion">Marketing</p>
-              </div>
-              <div class="icons">
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-instagram"></use>
-                </svg>
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-twitter"></use>
-                </svg>
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-facebook"></use>
-                </svg>
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-linkedin"></use>
-                </svg>
+                <ul class="icons-list">
+                  <li class="icons-punkt">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="icons-item"
+                      target="_blank"
+                    >
+                      <svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-punkt">
+                    <a
+                      href="https://twitter.com/"
+                      class="icons-item"
+                      target="_blank"
+                    >
+                      <svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-punkt">
+                    <a
+                      href="https://www.facebook.com/"
+                      class="icons-item"
+                      target="_blank"
+                      ><svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-punkt">
+                    <a
+                      href="https://www.linkedin.com/"
+                      class="icons-item"
+                      target="_blank"
+                      ><svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-photo-list">
@@ -246,20 +305,50 @@
               <div class="name-container">
                 <h3 class="name">Daniel Wilson</h3>
                 <p class="proffesion">UI Designer</p>
-              </div>
-              <div class="icons">
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-instagram"></use>
-                </svg>
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-twitter"></use>
-                </svg>
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-facebook"></use>
-                </svg>
-                <svg class="social" width="40" height="40">
-                  <use href="#icon-linkedin"></use>
-                </svg>
+                <ul class="icons-list">
+                  <li class="icons-punkt">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="icons-item"
+                      target="_blank"
+                    >
+                      <svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-punkt">
+                    <a
+                      href="https://twitter.com/"
+                      class="icons-item"
+                      target="_blank"
+                    >
+                      <svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-punkt">
+                    <a
+                      href="https://www.facebook.com/"
+                      class="icons-item"
+                      target="_blank"
+                      ><svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-punkt">
+                    <a
+                      href="https://www.linkedin.com/"
+                      class="icons-item"
+                      target="_blank"
+                      ><svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -390,7 +479,7 @@
     </main>
     <!-- Footer Info -->
     <footer class="footer">
-      <div class="container">
+      <div class="container dop-container">
         <div class="footer-info">
           <a class="logo-web-f" href="./index.html"
             >Web<span class="logo-studio-f">Studio</span></a
