--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <li class="description-text">
               <div class="description-icons">
                 <svg width="64" height="64">
-                  <use href="./images/icons (2).svg#antenna"></use>
+                  <use href="./images/iconstwo.svg#icon-antenna"></use>
                 </svg>
               </div>
 
@@ -94,7 +94,7 @@
             <li class="description-text">
               <div class="description-icons">
                 <svg width="64" height="64">
-                  <use href="./images/icons (2).svg#clock"></use>
+                  <use href="./images/iconstwo.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="description-list-title">Punctuality</h3>
@@ -106,7 +106,7 @@
             <li class="description-text">
               <div class="description-icons">
                 <svg width="64" height="64">
-                  <use href="diagram"></use>
+                  <use href="./images/iconstwo.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="description-list-title">Diligence</h3>
@@ -118,7 +118,7 @@
             <li class="description-text">
               <div class="description-icons">
                 <svg width="64" height="64">
-                  <use href="./images/icons (2).svg#astronaut"></use>
+                  <use href="./images/iconstwo.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="description-list-title">Technologies</h3>
@@ -141,51 +141,52 @@
                 <h3 class="name">Mark Guerrero</h3>
                 <p class="proffesion">Product Designer</p>
               </div>
-
-              <ul class="icons-list">
-                <li class="icons-punkt">
-                  <a
-                    href="https://www.instagram.com/"
-                    class="icons-item"
-                    target="_blank"
-                  >
-                    <svg class="social" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icons-punkt">
-                  <a
-                    href="https://twitter.com/"
-                    class="icons-item"
-                    target="_blank"
-                  >
-                    <svg class="social" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icons-punkt">
-                  <a
-                    href="https://www.facebook.com/"
-                    class="icons-item"
-                    target="_blank"
-                    ><svg class="social" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icons-punkt">
-                  <a
-                    href="https://www.linkedin.com/"
-                    class="icons-item"
-                    target="_blank"
-                    ><svg class="social" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="icons">
+                <ul class="icons-list">
+                  <li class="icons-punkt">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="icons-item"
+                      target="_blank"
+                    >
+                      <svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-punkt">
+                    <a
+                      href="https://twitter.com/"
+                      class="icons-item"
+                      target="_blank"
+                    >
+                      <svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-punkt">
+                    <a
+                      href="https://www.facebook.com/"
+                      class="icons-item"
+                      target="_blank"
+                      ><svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icons-punkt">
+                    <a
+                      href="https://www.linkedin.com/"
+                      class="icons-item"
+                      target="_blank"
+                      ><svg class="social" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="team-photo-list">
@@ -198,6 +199,8 @@
               <div class="name-container">
                 <h3 class="name">Tom Ford</h3>
                 <p class="proffesion">Frontend Developer</p>
+              </div>
+              <div class="icons">
                 <ul class="icons-list">
                   <li class="icons-punkt">
                     <a
@@ -249,6 +252,8 @@
               <div class="name-container">
                 <h3 class="name">Camila Garcia</h3>
                 <p class="proffesion">Marketing</p>
+              </div>
+              <div class="icons">
                 <ul class="icons-list">
                   <li class="icons-punkt">
                     <a
@@ -305,6 +310,8 @@
               <div class="name-container">
                 <h3 class="name">Daniel Wilson</h3>
                 <p class="proffesion">UI Designer</p>
+              </div>
+              <div class="icons">
                 <ul class="icons-list">
                   <li class="icons-punkt">
                     <a
