--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           >
           <ul class="menu">
             <li class="menu-item">
-              <a href="./index.html" class="menu-link">Studio</a>
+              <a href="./index.html" class="menu-link current">Studio</a>
             </li>
             <li class="menu-item">
               <a href="" class="menu-link">Portfolio</a>
