--- a/index.html
+++ b/index.html
@@ -537,5 +537,51 @@
         </div>
       </div>
     </footer>
+    <!-- Modal window -->
+    <div class="modal-overlay">
+      <div class="modal">
+        <button type="button" class="modal-button">
+          <svg class="modal-button-close" width="8" height="8">
+            <use href="./images/symbol.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p>Leave your contacts and we will call you back</p>
+        <form class="form" name="" autocomplete="off">
+          <label class="form-label" for=""
+            >Name
+            <input class="form-input" type="text" />
+            <svg class="form-icon" width="18" height="18">
+              <use href="./images/symbol.svg#icon-person"></use>
+            </svg>
+          </label>
+          <label class="form-label" for=""
+            >Phone
+            <input class="form-input" type="text" />
+            <svg class="form-icon" width="" height="">
+              <use></use>
+            </svg>
+          </label>
+          <label class="form-label" for=""
+            >Email
+            <input class="form-input" type="text" />
+            <svg class="form-icon" width="" height="">
+              <use></use>
+            </svg>
+          </label>
+          <label class="form-label" for=""
+            >Comment
+            <textarea class="form-input"> </textarea>
+            <svg>
+              <use></use>
+            </svg>
+          </label>
+          <label class="form-label" for=""
+            >I accept the terms and conditions of the Privacy Policy
+            <input type="checkbox" />
+          </label>
+          <button class="form-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
