--- a/index.html
+++ b/index.html
@@ -536,6 +536,21 @@
           </ul>
         </div>
       </div>
+
+      <div class="footer-form-container">
+        <p class="footer-form-par">Subscribe</p>
+        <form class="footer-form">
+          <label>
+            <input class="footer-input" type="text" placeholder="E-mail" />
+            <button class="footer-form-but">
+              Subscribe
+              <svg class="but-fly-icon" width="24" height="24">
+                <use href="./images/symbol.svg#icon-fly"></use>
+              </svg>
+            </button>
+          </label>
+        </form>
+      </div>
     </footer>
     <!-- Modal window -->
     <div class="modal-overlay">
@@ -545,42 +560,84 @@
             <use href="./images/symbol.svg#icon-close"></use>
           </svg>
         </button>
-        <p>Leave your contacts and we will call you back</p>
-        <form class="form" name="" autocomplete="off">
-          <label class="form-label" for=""
-            >Name
-            <input class="form-input" type="text" />
-            <svg class="form-icon" width="18" height="18">
-              <use href="./images/symbol.svg#icon-person"></use>
-            </svg>
-          </label>
-          <label class="form-label" for=""
-            >Phone
-            <input class="form-input" type="text" />
-            <svg class="form-icon" width="" height="">
-              <use></use>
-            </svg>
-          </label>
-          <label class="form-label" for=""
-            >Email
-            <input class="form-input" type="text" />
-            <svg class="form-icon" width="" height="">
-              <use></use>
-            </svg>
-          </label>
-          <label class="form-label" for=""
-            >Comment
-            <textarea class="form-input"> </textarea>
-            <svg>
-              <use></use>
-            </svg>
-          </label>
-          <label class="form-label" for=""
-            >I accept the terms and conditions of the Privacy Policy
-            <input type="checkbox" />
-          </label>
-          <button class="form-button" type="submit">Send</button>
+        <p class="modal-par">Leave your contacts and we will call you back</p>
+
+        <form class="form" name="#" autocomplete="off">
+          <div class="form-container">
+            <label class="form-label" for="name" id="user-name"
+              >Name
+              <div class="form-container-input">
+                <input
+                  class="form-input"
+                  type="text"
+                  name="user-name"
+                  autofocus
+                />
+                <svg class="form-icon" width="18" height="18">
+                  <use href="./images/symbol.svg#icon-person"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="form-container">
+            <label class="form-label" for="phone" id="user-phone"
+              >Phone
+              <div class="form-container-input">
+                <input class="form-input" type="text" />
+                <svg class="form-icon" width="18" height="18">
+                  <use href="./images/symbol.svg#icon-phone"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="form-container">
+            <label class="form-label" for="email"
+              >Email
+              <div class="form-container-input">
+                <input class="form-input" type="text" id="user-email" />
+                <svg class="form-icon" width="18" height="18">
+                  <use href="./images/symbol.svg#icon-email"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="form-container">
+            <label class="form-label" for="comment"
+              >Comment
+              <div class="form-container-input">
+                <textarea
+                  rows="10"
+                  name="user-comment"
+                  class="form-input form-input-com"
+                  id="user-comment"
+                  placeholder="Text input"
+                >
+                </textarea>
+              </div>
+            </label>
+          </div>
         </form>
+        <div class="form-check">
+          <label
+            ><input
+              class="check"
+              type="checkbox"
+              name="checkbox"
+              value=""
+            /><span class="form-check-text"
+              >I accept the terms and conditions of the</span
+            ></label
+          ><!-- <svg class="icon-check" width="16" height="16">
+            <use href="./images/symbol.svg#icon-Checkbox"></use>
+          </svg> -->
+          <!-- <span class="form-check-text"
+            >I accept the terms and conditions of the</span
+          > -->
+          <a href="#" class="priv-link">Privacy Policy</a>
+        </div>
+        <div class="but-send">
+          <button class="form-button" type="submit">Send</button>
+        </div>
       </div>
     </div>
   </body>
