--- a/index.html
+++ b/index.html
@@ -564,16 +564,16 @@
 
         <form class="form" name="#" autocomplete="off">
           <div class="form-container">
-            <label class="form-label" for="name" id="user-name"
+            <label class="form-label" for="user-name" id="user-name"
               >Name
               <div class="form-container-input">
                 <input
                   class="form-input"
                   type="text"
                   name="user-name"
-                  autofocus
+                  id="user-name"
                 />
-                <svg class="form-icon" width="18" height="18">
+                <svg class="form-icon" width="18" height="24">
                   <use href="./images/symbol.svg#icon-person"></use>
                 </svg>
               </div>
@@ -584,7 +584,7 @@
               >Phone
               <div class="form-container-input">
                 <input class="form-input" type="text" />
-                <svg class="form-icon" width="18" height="18">
+                <svg class="form-icon" width="18" height="24">
                   <use href="./images/symbol.svg#icon-phone"></use>
                 </svg>
               </div>
@@ -595,7 +595,7 @@
               >Email
               <div class="form-container-input">
                 <input class="form-input" type="text" id="user-email" />
-                <svg class="form-icon" width="18" height="18">
+                <svg class="form-icon" width="18" height="24">
                   <use href="./images/symbol.svg#icon-email"></use>
                 </svg>
               </div>
@@ -618,12 +618,13 @@
           </div>
         </form>
         <div class="form-check">
-          <label
+          <label for="user-privacy"
             ><input
               class="check"
               type="checkbox"
-              name="checkbox"
-              value=""
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
             /><span class="form-check-text"
               >I accept the terms and conditions of the</span
             ></label
