--- a/index.html
+++ b/index.html
@@ -565,80 +565,71 @@
         <form class="form" name="#" autocomplete="off">
           <div class="form-container">
             <label class="form-label" for="user-name" id="user-name"
-              >Name
-              <div class="form-container-input">
-                <input
-                  class="form-input"
-                  type="text"
-                  name="user-name"
-                  id="user-name"
-                />
-                <svg class="form-icon" width="18" height="24">
-                  <use href="./images/symbol.svg#icon-person"></use>
-                </svg>
-              </div>
-            </label>
+              >Name</label
+            >
+            <div class="form-container-input">
+              <input
+                class="form-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/symbol.svg#icon-person"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-container">
-            <label class="form-label" for="phone" id="user-phone"
-              >Phone
-              <div class="form-container-input">
-                <input class="form-input" type="text" />
-                <svg class="form-icon" width="18" height="24">
-                  <use href="./images/symbol.svg#icon-phone"></use>
-                </svg>
-              </div>
-            </label>
+            <label class="form-label" for="phone" id="user-phone">Phone</label>
+            <div class="form-container-input">
+              <input class="form-input" type="text" />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/symbol.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-container">
-            <label class="form-label" for="email"
-              >Email
-              <div class="form-container-input">
-                <input class="form-input" type="text" id="user-email" />
-                <svg class="form-icon" width="18" height="24">
-                  <use href="./images/symbol.svg#icon-email"></use>
-                </svg>
-              </div>
-            </label>
+            <label class="form-label" for="email">Email</label>
+            <div class="form-container-input">
+              <input class="form-input" type="text" id="user-email" />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/symbol.svg#icon-email"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-container">
-            <label class="form-label" for="comment"
-              >Comment
-              <div class="form-container-input">
-                <textarea
-                  rows="10"
-                  name="user-comment"
-                  class="form-input form-input-com"
-                  id="user-comment"
-                  placeholder="Text input"
-                >
-                </textarea>
-              </div>
-            </label>
+            <label class="form-label" for="user-comment">Comment</label>
+            <div class="form-container-input">
+              <textarea
+                rows="10"
+                name="user-comment"
+                class="form-input form-input-com"
+                id="user-comment"
+                placeholder="Text input"
+              >
+              </textarea>
+            </div>
           </div>
         </form>
         <div class="form-check">
-          <label for="user-privacy"
-            ><input
-              class="check"
-              type="checkbox"
-              name="user-privacy"
-              id="user-privacy"
-              value="true"
-            /><span class="form-check-text"
-              >I accept the terms and conditions of the</span
-            ></label
-          ><!-- <svg class="icon-check" width="16" height="16">
-            <use href="./images/symbol.svg#icon-Checkbox"></use>
-          </svg> -->
-          <!-- <span class="form-check-text"
-            >I accept the terms and conditions of the</span
-          > -->
-          <a href="#" class="priv-link">Privacy Policy</a>
+          <input
+            class="visually-hidden input-checkbox"
+            type="checkbox"
+            name="user-privacy"
+            id="user-privacy"
+            value="true"
+          /><label for="user-privacy" class="form-check-text"
+            ><span class="symbol-check">
+              <svg>
+                <use href="./images/symbol.svg#icon-checkmark"></use>
+              </svg> </span
+            >I accept the terms and conditions of the
+
+            <a href="#" class="priv-link">Privacy Policy</a>
+          </label>
         </div>
-        <div class="but-send">
-          <button class="form-button" type="submit">Send</button>
-        </div>
+
+        <button class="form-button" type="submit">Send</button>
       </div>
     </div>
   </body>
