--- a/index.html
+++ b/index.html
@@ -597,39 +597,38 @@
               </svg>
             </div>
           </div>
-          <div class="form-container">
+          <div class="form-container-comment">
             <label class="form-label" for="user-comment">Comment</label>
-            <div class="form-container-input">
-              <textarea
-                rows="10"
-                name="user-comment"
-                class="form-input form-input-com"
-                id="user-comment"
-                placeholder="Text input"
-              >
-              </textarea>
-            </div>
+
+            <textarea
+              id="user-comment"
+              name="user-comment"
+              class="form-input-com"
+              placeholder="Text input"
+            >
+            </textarea>
           </div>
+
+          <div class="form-check">
+            <input
+              class="visually-hidden input-checkbox"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            /><label for="user-privacy" class="form-check-text"
+              ><span class="symbol-check">
+                <svg>
+                  <use href="./images/symbol.svg#icon-checkmark"></use>
+                </svg> </span
+              >I accept the terms and conditions of the
+
+              <a href="#" class="priv-link">Privacy Policy</a>
+            </label>
+          </div>
+
+          <button class="form-button" type="submit">Send</button>
         </form>
-        <div class="form-check">
-          <input
-            class="visually-hidden input-checkbox"
-            type="checkbox"
-            name="user-privacy"
-            id="user-privacy"
-            value="true"
-          /><label for="user-privacy" class="form-check-text"
-            ><span class="symbol-check">
-              <svg>
-                <use href="./images/symbol.svg#icon-checkmark"></use>
-              </svg> </span
-            >I accept the terms and conditions of the
-
-            <a href="#" class="priv-link">Privacy Policy</a>
-          </label>
-        </div>
-
-        <button class="form-button" type="submit">Send</button>
       </div>
     </div>
   </body>
