--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
               value="true"
             /><label for="user-privacy" class="form-check-text"
               ><span class="symbol-check">
-                <svg>
+                <svg class="privacy-check" width="10" height="8">
                   <use href="./images/symbol.svg#icon-checkmark"></use>
                 </svg> </span
               >I accept the terms and conditions of the
