--- a/index.html
+++ b/index.html
@@ -541,8 +541,8 @@
         <p class="footer-form-par">Subscribe</p>
         <form class="footer-form">
           <label>
-            <input class="footer-input" type="text" placeholder="E-mail" />
-            <button class="footer-form-but">
+            <input class="footer-input" type="email" placeholder="E-mail" />
+            <button class="footer-form-but" type="submit">
               Subscribe
               <svg class="but-fly-icon" width="24" height="24">
                 <use href="./images/symbol.svg#icon-fly"></use>
