--- a/index.html
+++ b/index.html
@@ -540,14 +540,18 @@
           <p class="footer-form-par">Subscribe</p>
           <form class="footer-form">
             <label>
-              <input class="footer-input" type="email" placeholder="E-mail" />
-              <button class="footer-form-but" type="submit">
-                Subscribe
-                <svg class="but-fly-icon" width="24" height="24">
-                  <use href="./images/symbol.svg#icon-fly"></use>
-                </svg>
-              </button>
-            </label>
+              <input
+                class="footer-input"
+                name="email"
+                type="email"
+                placeholder="E-mail"
+            /></label>
+            <button class="footer-form-but" type="submit">
+              Subscribe
+              <svg class="but-fly-icon" width="24" height="24">
+                <use href="./images/symbol.svg#icon-fly"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
