--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
         <div class="footer-form-container">
           <p class="footer-form-par">Subscribe</p>
           <form class="footer-form">
-            <label>
+            <label class="footer-form-email">
               <input
                 class="footer-input"
                 name="email"
