--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
               <input
                 class="form-input"
                 type="text"
-                name="user-name"
+                name="name"
                 id="user-name"
               />
               <svg class="form-icon" width="18" height="24">
@@ -586,16 +586,26 @@
           <div class="form-container">
             <label class="form-label" for="phone" id="user-phone">Phone</label>
             <div class="form-container-input">
-              <input class="form-input" type="text" />
+              <input
+                class="form-input"
+                type="text"
+                name="phone"
+                id="user-phone"
+              />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/symbol.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
           <div class="form-container">
-            <label class="form-label" for="email">Email</label>
+            <label class="form-label" for="email" id="user-email">Email</label>
             <div class="form-container-input">
-              <input class="form-input" type="text" id="user-email" />
+              <input
+                class="form-input"
+                type="text"
+                name="email"
+                id="user-email"
+              />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/symbol.svg#icon-email"></use>
               </svg>
