--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <style type="text/css" id="operaUserStyle"></style>
+    <style id="operaUserStyle"></style>
   </head>
 
   <body>
@@ -568,14 +568,12 @@
 
         <form class="form" name="#" autocomplete="off">
           <div class="form-container">
-            <label class="form-label" for="user-name" id="user-name"
-              >Name</label
-            >
+            <label class="form-label" for="user-name">Name</label>
             <div class="form-container-input">
               <input
                 class="form-input"
                 type="text"
-                name="name"
+                name="user-name"
                 id="user-name"
               />
               <svg class="form-icon" width="18" height="24">
@@ -584,7 +582,7 @@
             </div>
           </div>
           <div class="form-container">
-            <label class="form-label" for="phone" id="user-phone">Phone</label>
+            <label class="form-label" for="user-phone">Phone</label>
             <div class="form-container-input">
               <input
                 class="form-input"
@@ -598,7 +596,7 @@
             </div>
           </div>
           <div class="form-container">
-            <label class="form-label" for="email" id="user-email">Email</label>
+            <label class="form-label" for="user-email">Email</label>
             <div class="form-container-input">
               <input
                 class="form-input"
