--- a/index.html
+++ b/index.html
@@ -617,8 +617,7 @@
               name="user-comment"
               class="form-input-com"
               placeholder="Text input"
-            >
-            </textarea>
+            ></textarea>
           </div>
 
           <div class="form-check">
