--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     />
 
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="media.css" />
     <style id="operaUserStyle"></style>
   </head>
 
@@ -35,32 +36,40 @@
           <a href="./index.html" class="logo-web"
             >Web<span class="logo-studio">Studio</span></a
           >
-          <ul class="menu">
-            <li class="menu-item">
-              <a href="./index.html" class="menu-link current">Studio</a>
-            </li>
-            <li class="menu-item">
-              <a href="" class="menu-link">Portfolio</a>
-            </li>
-            <li class="menu-item">
-              <a href="" class="menu-link">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <address class="adress">
-          <ul class="contacts-list">
-            <li class="menu-item">
-              <a class="contacts-info" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="menu-item">
-              <a class="contacts-info" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+
+          <div class="menu-mobile">
+            <ul class="menu">
+              <li class="menu-item">
+                <a href="./index.html" class="menu-link current">Studio</a>
+              </li>
+              <li class="menu-item">
+                <a href="" class="menu-link">Portfolio</a>
+              </li>
+              <li class="menu-item">
+                <a href="" class="menu-link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="adress">
+            <ul class="contacts-list">
+              <li class="menu-item">
+                <a class="contacts-info" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="menu-item">
+                <a class="contacts-info" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+          </div>
+        <button class="burger" type="button">
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/symbol.svg#icon-burger-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
