--- a/index.html
+++ b/index.html
@@ -36,8 +36,21 @@
           <a href="./index.html" class="logo-web"
             >Web<span class="logo-studio">Studio</span></a
           >
+          <button class="burger menu-toggle js-open-menu" type="button">
+            <svg class="burger-icon" width="24" height="24">
+              <use href="./images/symbol.svg#icon-burger-menu"></use>
+            </svg>
+          </button>
+          <div class="menu-container js-menu-container" id="mobile-menu">
+            <button
+              type="button"
+              class="modal-button-menu menu-toggle js-close-menu"
+            >
+              <svg class="modal-button-close" width="8" height="8">
+                <use href="./images/symbol.svg#icon-close"></use>
+              </svg>
+            </button>
 
-          <div class="menu-mobile">
             <ul class="menu">
               <li class="menu-item">
                 <a href="./index.html" class="menu-link current">Studio</a>
@@ -49,27 +62,67 @@
                 <a href="" class="menu-link">Contacts</a>
               </li>
             </ul>
-          </nav>
-          <address class="adress">
-            <ul class="contacts-list">
-              <li class="menu-item">
-                <a class="contacts-info" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
+
+            <address class="adress">
+              <ul class="contacts-list">
+                <li class="menu-item-address">
+                  <a class="contacts-info" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="menu-item-address">
+                  <a class="contacts-info" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <ul class="icons-list-menu">
+              <li class="icons-punkt">
+                <a
+                  href="https://www.instagram.com/"
+                  class="icons-item"
+                  target="_blank"
                 >
+                  <svg class="social" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="menu-item">
-                <a class="contacts-info" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
+              <li class="icons-punkt">
+                <a
+                  href="https://twitter.com/"
+                  class="icons-item"
+                  target="_blank"
                 >
+                  <svg class="social" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icons-punkt">
+                <a
+                  href="https://www.facebook.com/"
+                  class="icons-item"
+                  target="_blank"
+                  ><svg class="social" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icons-punkt">
+                <a
+                  href="https://www.linkedin.com/"
+                  class="icons-item"
+                  target="_blank"
+                  ><svg class="social" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
           </div>
-        <button class="burger" type="button">
-          <svg class="burger-icon" width="24" height="24">
-            <use href="./images/symbol.svg#icon-burger-menu"></use>
-          </svg>
-        </button>
+        </nav>
       </div>
     </header>
     <main>
@@ -77,7 +130,9 @@
       <section class="section tit-a-but">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
-          <button class="btn" type="button">Order Service</button>
+          <button class="btn" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -566,9 +621,9 @@
       </div>
     </footer>
     <!-- Modal window -->
-    <div class="modal-overlay">
+    <div class="modal-overlay is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="modal-button">
+        <button type="button" class="modal-button" data-modal-close>
           <svg class="modal-button-close" width="8" height="8">
             <use href="./images/symbol.svg#icon-close"></use>
           </svg>
@@ -651,5 +706,13 @@
         </form>
       </div>
     </div>
+    <script src="./js/mobile-menu.js"></script>
+    <script src="./js/modal.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
