--- a/index.html
+++ b/index.html
@@ -36,6 +36,34 @@
           <a href="./index.html" class="logo-web"
             >Web<span class="logo-studio">Studio</span></a
           >
+
+          <ul class="menu">
+            <li class="menu-item">
+              <a href="./index.html" class="menu-link current">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a href="" class="menu-link">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a href="" class="menu-link">Contacts</a>
+            </li>
+          </ul>
+
+          <address class="address">
+            <ul class="contacts-list">
+              <li class="menu-item-address">
+                <a class="contacts-info" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="menu-item-address">
+                <a class="contacts-info" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+
           <button class="burger menu-toggle js-open-menu" type="button">
             <svg class="burger-icon" width="24" height="24">
               <use href="./images/symbol.svg#icon-burger-menu"></use>
@@ -51,7 +79,7 @@
               </svg>
             </button>
 
-            <ul class="menu">
+            <ul class="menu-mobile-list">
               <li class="menu-item">
                 <a href="./index.html" class="menu-link current">Studio</a>
               </li>
@@ -64,7 +92,7 @@
             </ul>
 
             <address class="adress">
-              <ul class="contacts-list">
+              <ul class="contacts-list-mobile">
                 <li class="menu-item-address">
                   <a class="contacts-info" href="mailto:info@devstudio.com"
                     >info@devstudio.com</a
